--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@hookform/resolvers": "^1.0.0",
     "@mui/icons-material": "^5.0.1",
     "@mui/material": "^5.0.1",
+    "@mui/styles": "^5.0.1",
     "@reduxjs/toolkit": "^1.6.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
