--- a/package.json
+++ b/package.json
@@ -7,16 +7,15 @@
     "@emotion/styled": "^11.3.0",
     "@hookform/error-message": "0.0.4",
     "@hookform/resolvers": "^1.0.0",
-    "@mui/icons-material": "^5.0.1",
-    "@mui/material": "^5.0.1",
-    "@mui/styles": "^5.0.1",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "@reduxjs/toolkit": "^1.6.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.4",
     "classnames": "^2.3.1",
-    "notistack": "^2.0.2",
+    "notistack": "^0.9.17",
     "query-string": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
